@@ -1211,7 +1211,7 @@ AT_CLEANUP
 
 
 AT_SETUP([Recursive CALL of RECURSIVE program])
-AT_KEYWORDS([runmisc])
+AT_KEYWORDS([runmisc CANCEL EXTERNAL])
 
 AT_DATA([caller.cob], [
        IDENTIFICATION   DIVISION.
@@ -1220,44 +1220,49 @@ AT_DATA([caller.cob], [
        CONFIGURATION    SECTION.
        DATA             DIVISION.
        WORKING-STORAGE  SECTION.
-       77  STOPPER      PIC 9 EXTERNAL.
+       77  STOPPER      PIC S9 EXTERNAL.
        PROCEDURE        DIVISION.
            MOVE 0 TO STOPPER
-           CALL "callee" END-CALL.
-           GOBACK.
+           CALL "callee"
+           DISPLAY 'OK' NO ADVANCING END-DISPLAY
+           CANCEL "callee" , "callee2"
+           DISPLAY ' + FINE' NO ADVANCING END-DISPLAY
+           STOP RUN.
 ])
 
 AT_DATA([callee.cob], [
        IDENTIFICATION   DIVISION.
        PROGRAM-ID.      callee IS RECURSIVE.
-       ENVIRONMENT      DIVISION.
-       CONFIGURATION    SECTION.
        DATA             DIVISION.
        WORKING-STORAGE  SECTION.
-       77  STOPPER      PIC 9 EXTERNAL.
+       77  STOPPER      PIC S9 EXTERNAL.
        PROCEDURE        DIVISION.
            IF STOPPER = 9
-              DISPLAY 'OK' NO ADVANCING END-DISPLAY
-              STOP RUN
+              MOVE -1 TO STOPPER
            ELSE
-              ADD  1 TO STOPPER END-ADD
-              CALL "callee2" END-CALL
-           END-IF.
+              ADD   1 TO STOPPER
+              CALL "callee2"
+           END-IF
            GOBACK.
 ])
 
 AT_DATA([callee2.cob], [
        IDENTIFICATION   DIVISION.
        PROGRAM-ID.      callee2 IS RECURSIVE.
+       DATA             DIVISION.
+       WORKING-STORAGE  SECTION.
+       77  STOPPER      PIC S9 EXTERNAL.
        PROCEDURE        DIVISION.
-           CALL "callee" END-CALL.
+           IF STOPPER NOT EQUAL -1
+             CALL "callee"
+           END-IF
            GOBACK.
 ])
 
 AT_CHECK([$COMPILE caller.cob], [0], [], [])
 AT_CHECK([$COMPILE_MODULE callee.cob], [0], [], [])
 AT_CHECK([$COMPILE_MODULE callee2.cob], [0], [], [])
-AT_CHECK([$COBCRUN_DIRECT ./caller], [0], [OK], [])
+AT_CHECK([$COBCRUN_DIRECT ./caller], [0], [OK + FINE], [])
 
 AT_CLEANUP
 
